all project added up to en-GB.com_easysocial.ini (not included)

--- a/com_easysocial_full_pro_1/languages/admin/en-GB.com_easysocial.sys.ini
+++ b/com_easysocial_full_pro_1/languages/admin/en-GB.com_easysocial.sys.ini
@@ -270,6 +270,31 @@ COM_EASYSOCIAL_EVENTS_LAYOUT_SELECT_FILTER_NEARBY="Nearby Events"
 COM_EASYSOCIAL_EVENTS_LAYOUT_EVENT_CATEGORY="Event Category Layout"
 COM_EASYSOCIAL_EVENTS_LAYOUT_EVENT_CATEGORY_DESC="Displays the event category layout on the site."
 
+; @since 1.3
+; Projects
+COM_EASYSOCIAL_MENU_PROJECTS="Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_CREATE="Create Project"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_CREATE_DESC="Displays the project creation page on the site."
+COM_EASYSOCIAL_PROJECTS_LAYOUT_ITEM="Single Project Item"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_ITEM_DESC="Displays a single project layout."
+COM_EASYSOCIAL_EVEMTS_LAYOUT_ITEM_SELECT_PROJECT="Select Project"
+COM_EASYSOCIAL_EVEMTS_LAYOUT_ITEM_SELECT_PROJECT_DESC="Select as project to be associated with this menu item."
+COM_EASYSOCIAL_EVEMTS_LAYOUT_ITEM_SELECT_PROJECT_REQUIRED="Project is required."
+COM_EASYSOCIAL_PROJECTS_LAYOUT_DEFAULT="Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_DEFAULT_DESC="Displays projects that are created on the site."
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER="Select Filter"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_DESC="Determine the default filter to use for this projects view."
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_ALL="All Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_FEATURED="Featured Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_MYPROJECTS="My Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_INVITED="Invited"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_PAST="Past Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_ONGOING="On Going Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_UPCOMING="Upcoming Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_SELECT_FILTER_NEARBY="Nearby Projects"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_PROJECT_CATEGORY="Project Category Layout"
+COM_EASYSOCIAL_PROJECTS_LAYOUT_PROJECT_CATEGORY_DESC="Displays the project category layout on the site."
+
 COM_EASYSOCIAL_VIDEOS_LAYOUT_ITEM="Single Video Item"
 COM_EASYSOCIAL_VIDEOS_LAYOUT_ITEM_DESC="Displays a single video item"
 COM_EASYSOCIAL_SELECT_VIDEO="Select Video"
