all project added up to en-GB.com_easysocial.ini (done)

--- a/com_easysocial_full_pro_1/languages/site/en-GB.com_easysocial.ini
+++ b/com_easysocial_full_pro_1/languages/site/en-GB.com_easysocial.ini
@@ -10257,6 +10257,7 @@ COM_EASYSOCIAL_FOLLOWERS_ALREADY_FOLLOWED="You've already followed this user. Ac
 COM_EASYSOCIAL_FOLLOWERS_ERROR_FOLLOWING="There is an error occured during the following process. Please try again later."
 COM_EASYSOCIAL_FOLLOWERS_YOU_ARE_NOW_FOLLOWING_USER="You're now following this user's updates."
 APP_EVENT_PHOTOS_EMAILS_COMMENT_PROFILE_COVER_ITEM_SUBJECT="{actor} posted a comment on your cover photo"
+APP_PROJECT_PHOTOS_EMAILS_COMMENT_PROFILE_COVER_ITEM_SUBJECT="{actor} posted a comment on your cover photo"
 
 APP_EVENT_SHARES_EMAILS_USER_REPOSTED_YOUR_POST_SUBJECT="{actor} reposted your post"
 APP_EVENT_SHARES_USER_REPOSTED_YOUR_POST="%1$s reposted your item"
@@ -10265,6 +10266,13 @@ APP_EVENT_PHOTOS_NOTIFICATIONS_COMMENTED_ON_USERS_PHOTO="%1$s commented on {b}%2
 APP_EVENT_PHOTOS_NOTIFICATIONS_LIKES_USERS_PHOTO_PLURAL="%1$s also like {b}%2$s's{/b} photo"
 APP_EVENT_PHOTOS_NOTIFICATIONS_LIKES_USERS_ALBUMS_SINGULAR="%1$s liked {b}%2$s's{/b} album"
 APP_EVENT_PHOTOS_NOTIFICATIONS_COMMENTED_ON_YOUR_PHOTO_ALBUM="%1$s posted a comment on your album"
+APP_PROJECT_SHARES_EMAILS_USER_REPOSTED_YOUR_POST_SUBJECT="{actor} reposted your post"
+APP_PROJECT_SHARES_USER_REPOSTED_YOUR_POST="%1$s reposted your item"
+APP_PROJECT_SHARES_USER_REPOSTED_YOUR_POST_CONTENT="This is a notification to inform you that %1$s reposted your item."
+APP_PROJECT_PHOTOS_NOTIFICATIONS_COMMENTED_ON_USERS_PHOTO="%1$s commented on {b}%2$s's{/b} photo"
+APP_PROJECT_PHOTOS_NOTIFICATIONS_LIKES_USERS_PHOTO_PLURAL="%1$s also like {b}%2$s's{/b} photo"
+APP_PROJECT_PHOTOS_NOTIFICATIONS_LIKES_USERS_ALBUMS_SINGULAR="%1$s liked {b}%2$s's{/b} album"
+APP_PROJECT_PHOTOS_NOTIFICATIONS_COMMENTED_ON_YOUR_PHOTO_ALBUM="%1$s posted a comment on your album"
 
 APP_GROUP_MEMBERS_SETTINGS_WIDGETS_LIMIT="Total Members To Display"
 APP_GROUP_MEMBERS_SETTINGS_WIDGETS_LIMIT_DESC="Determines the total number of members to display on the widget"
@@ -10299,7 +10307,14 @@ FIELDS_EVENT_UPCOMINGREMINDER_DEFAULT_TITLE="Upcoming Reminder"
 FIELDS_EVENT_UPCOMINGREMINDER_DEFAULT_DESCRIPTION="You can set if your guest should receive upcoming event reminder or not. Enter number only for how many days the reminder should be sent before the actual event date. <br /><br />Enter zero (0) to disable the reminder."
 FIELDS_EVENT_UPCOMINGREMINDER_INFO="This field allows event creator to set if their guest should receive reminder for the upcoming event."
 FIELDS_EVENT_UPCOMINGREMINDER_PLACEHOLDER="Enter number of days here. Enter 0 to disable reminder."
+; @since 1.4.0
+; Upcoming Project reminder field.
+FIELDS_PROJECT_UPCOMINGREMINDER_DEFAULT_TITLE="Upcoming Reminder"
+FIELDS_PROJECT_UPCOMINGREMINDER_DEFAULT_DESCRIPTION="You can set if your guest should receive upcoming project reminder or not. Enter number only for how many days the reminder should be sent before the actual project date. <br /><br />Enter zero (0) to disable the reminder."
+FIELDS_PROJECT_UPCOMINGREMINDER_INFO="This field allows project creator to set if their guest should receive reminder for the upcoming project."
+FIELDS_PROJECT_UPCOMINGREMINDER_PLACEHOLDER="Enter number of days here. Enter 0 to disable reminder."
 
+COM_EASYSOCIAL_EMAILS_UPCOMING_EVENT_REMINDER_SUBJECT="Hi %1$s, you've upcoming events!"
 COM_EASYSOCIAL_EMAILS_UPCOMING_EVENT_REMINDER_SUBJECT="Hi %1$s, you've upcoming events!"
 COM_EASYSOCIAL_EMAILS_UPCOMING_REMINDER_HEADING="Your have %1$s upcoming event(s)."
 COM_EASYSOCIAL_EMAILS_UPCOMING_REMINDER_SUBHEADING="Relax! This is a system reminder for the upcoming events that you're participanting."
@@ -10312,6 +10327,8 @@ COM_EASYSOCIAL_EMAILS_UPCOMING_REMINDER_VENUE="Venue: %1$s"
 COM_EASYSOCIAL_EMAILS_UPCOMING_REMINDER_FROM_TO="From %1$s to %2$s"
 COM_EASYSOCIAL_CRONJOB_EVENT_UPCOMING_REMINDER_PROCESSED="Sent upcoming event's reminder to %1$s users."
 COM_EASYSOCIAL_CRONJOB_EVENT_UPCOMING_REMINDER_NOTHING_TO_EXECUTE="There is no need to send reminder to users for upcoming events."
+COM_EASYSOCIAL_CRONJOB_PROJECT_UPCOMING_REMINDER_PROCESSED="Sent upcoming project's reminder to %1$s users."
+COM_EASYSOCIAL_CRONJOB_PROJECT_UPCOMING_REMINDER_NOTHING_TO_EXECUTE="There is no need to send reminder to users for upcoming projects."
 
 COM_EASYSOCIAL_VIDEOS_NOT_ALLOWED_TO_DELETE="You are not allowed to delete this video"
 COM_EASYSOCIAL_VIDEOS_DELETE_SUCCESS="Video deleted from the site successfully."
@@ -10508,10 +10525,13 @@ COM_EASYSOCIAL_VIDEOS_NO_DESCRIPTION_AVAILABLE="No description available"
 APP_VIDEOS_GROUP_TITLE="Videos"
 COM_EASYSOCIAL_EVENTS_VIDEOS_PLURAL="%1$s Videos"
 COM_EASYSOCIAL_EVENTS_VIDEOS_SINGULAR="%1$s Video"
+COM_EASYSOCIAL_PROJECTS_VIDEOS_PLURAL="%1$s Videos"
+COM_EASYSOCIAL_PROJECTS_VIDEOS_SINGULAR="%1$s Video"
 COM_EASYSOCIAL_GROUPS_VIDEOS_PLURAL="%1$s Videos"
 COM_EASYSOCIAL_GROUPS_VIDEOS_SINGULAR="%1$s Video"
 COM_EASYSOCIAL_VIDEOS_EXCEEDED_ALLOWED_FILESIZE="The file size of the video exceeded the allowed size of %1$s"
 
+COM_EASYSOCIAL_EMAILS_PROJECT_VIDEO_CREATED_SUBJECT="{actor} uploaded a new video in the project"
 COM_EASYSOCIAL_EMAILS_EVENT_VIDEO_CREATED_SUBJECT="{actor} uploaded a new video in the event"
 COM_EASYSOCIAL_EMAILS_GROUP_VIDEO_CREATED_SUBJECT="{actor} uploaded a new video in the group"
 COM_EASYSOCIAL_EMAILS_GROUP_NEW_VIDEO="New Video Uploaded"
@@ -10648,6 +10668,7 @@ COM_EASYSOCIAL_GROUPS_VIDEOS_STRING_SINGULAR="Video"
 COM_EASYSOCIAL_STORY_STATUS="Status"
 COM_EASYSOCIAL_STORY_PHOTO="Photo"
 COM_EASYSOCIAL_STORY_EVENT="Event"
+COM_EASYSOCIAL_STORY_PROJECT="Project"
 COM_EASYSOCIAL_STORY_POLL="Poll"
 COM_EASYSOCIAL_STORY_FILES="File"
 COM_EASYSOCIAL_STORY_LINK="Link"
@@ -10665,6 +10686,9 @@ COM_EASYSOCIAL_VIDEOS_GROUP_CATEGORY_PAGE_TITLE="%1$s's videos - %2$s"
 COM_EASYSOCIAL_VIDEOS_EVENT_PAGE_TITLE="%1$s's videos"
 COM_EASYSOCIAL_VIDEOS_EVENT_FEATURED_PAGE_TITLE="%1$s's featured videos"
 COM_EASYSOCIAL_VIDEOS_EVENT_CATEGORY_PAGE_TITLE="%1$s's videos - %2$s"
+COM_EASYSOCIAL_VIDEOS_PROJECT_PAGE_TITLE="%1$s's videos"
+COM_EASYSOCIAL_VIDEOS_PROJECT_FEATURED_PAGE_TITLE="%1$s's featured videos"
+COM_EASYSOCIAL_VIDEOS_PROJECT_CATEGORY_PAGE_TITLE="%1$s's videos - %2$s"
 COM_EASYSOCIAL_DAYS="Days"
 COM_EASYSOCIAL_GUESTS="Guests"
 COM_EASYSOCIAL_STREAM_SEE_TRANSLATION="See Translation"
@@ -10685,6 +10709,12 @@ COM_EASYSOCIAL_EVENTS_SORTING_EVENT_DISTANCE="Distance"
 COM_EASYSOCIAL_EVENTS_SORTING_PROJECT_DATE="Project Date"
 COM_EASYSOCIAL_EVENTS_SORTING_PROJECT_CREATED_DATE="Created Date"
 COM_EASYSOCIAL_EVENTS_SORTING_PROJECT_DISTANCE="Distance"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_DATE="Project Date"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_CREATED_DATE="Created Date"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_DISTANCE="Distance"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_DATE="Project Date"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_CREATED_DATE="Created Date"
+COM_EASYSOCIAL_PROJECTS_SORTING_PROJECT_DISTANCE="Distance"
 APP_MENTIONS_APP_DESCRIPTION="Allows user on the site to mention their friends on the story form"
 
 COM_EASYSOCIAL_PAGE_TITLE_ADVANCED_SEARCH_GROUP_MATCHES="Group Matches"
